namespace Sunnyyssh.ConsoleUI;

public enum Sizing
{
    Absolute,
    Relational,
    RelationalHeight,
    RelationalWidth,
}