namespace Sunnyyssh.ConsoleUI;

public enum Orientation
{
    Vertical,
    Horizontal
}