@startuml
'Console interface


abstract UIElement $Core $Public
{    
    + bool IsDrawn { get; private set; }
    + Sizing Sizing { get; private init; }
    + int? Height { get; private init; }
    + int? Width { get; private init; }
    + double? HeightRelation { get; private init; }
    + double? WidthRelation { get; private init; }
    'protected internal member
    #~  {abstract} DrawState GetDrawState(DrawOptions)
    ~ event RemoveElementEventHandler RemoveElement
    # void Remove(RemoveOptions)
    ~ event RemoveElementEventHandler RedrawElement
    # void Redraw(RedrawOptions)
    
}

abstract UIManager $Core $Public
{
    + {static} UIManager? Instance { get; }
    + {static} UIManager Initialize(UIManagerOptions)
    + int Width { get; }
    + int Height { get; }
    + UIElement[] Children { get; }
    # List<UIElement> ChildrenList { get; private init; }
    + {abstract} int BufferWidth { get; }
    + {abstract} int BufferHeight { get; }
    + {abstract} void AddChild(UIElement)
    + {abstract} void RemoveChild(UIElement)
    + {abstract} void Run()
    + {abstract} void Exit()
    # {abstract} void GiveFocus(IFocusable)
    # {abstract} void RemoveFocus(IFocusable)
    # {abstract} void RedrawChild(UIElement, RedrawOptions)
    # {abstract} void AssignFocusFlowTo(Wrapper)
    # {abstract} void ContinueFocusFlowFrom(Wrapper)
}
UIManager "*" o- UIElement

class DefaultUIManager $Internal implements UIManager
{
    
}

interface IFocusable $Core $Public
{
    + void ForceEnterFocus(ForceEnterFocusOptions)
    + void ForceExitFocus(ForceExitFocusOptions)
    + event ForceEnterFocusEventHandler ForceEnterFocus
    + event ForceExitFocusEventHandler ForceExitFocus
    + {abstract} void EnterFocus(EnterFocusOptions)
    + {abstract} void ExitFocus(ExitFocusOptions)
    + {abstract} bool IsWaitingFocus { get; }
    + {abstract} bool IsFocused { get; }
}

interface IKeyWaiter $Core $Public implements IFocusable
{
    + {abstract} void OnKeyPressed(ConsoleKeyInfo)   
}

abstract Wrapper $Core $Public implements UIElement, IKeyWaiter
{
    + UIElement[] Children { get; }
    # List<UIElement> ChildrenList { get; private init; }
    # bool CheckChildrenTree(UIElement) 
    # {abstract} void GiveFocus(IFocusable)
    # {abstract} void RemoveFocus(IFocusable)
    # {abstract} void AssignFocusFlowTo(Wrapper)
    # {abstract} void ContinueFocusFlowFrom(Wrapper)
}
Wrapper "*" o- UIElement 

class FocusManager $Core $Internal
{
    
}

FocusManager --* UIManager
FocusManager -* Wrapper


enum Sizing $Public
{
    Relational
    Absolute
    
}
UIElement *- Sizing

class GridWrapper $Public implements Wrapper
{
    
}

class StackWrapper $Public implements Wrapper
{
    + Orientation Orientation { get; protected init; }
    + void AddChild(UIElement)
}
StackWrapper *- Orientation

class CanvasWrapper $Public implements Wrapper
{
    
}

enum Orientation $Public
{
    Horizontal
    Vertical
}

abstract ObservableObject $Public
{
    + event PropertyUpdatedHandler PropertyUpdated
    + void OnChange(string)
}

class Observable<T> $Public implements ObservableObject
{
    + T Value { get; set; }
}

abstract DataElement<TPresenting> $Public implements UIElement
{
    - TPresenting? _presentationState
    - Binder<TPresenting>? _binder
    # Bind<TObservable>(TObservable, Func<TObservable, TPresenting>)
'    + {abstract} void Redraw()
}

'internal type
abstract class "Binder<TPresenting>" as ABinder $Internal
{
    + {abstract} TPresenting? GetPresentation()
}

'internal type
class Binder<TObservable, TPresenting> $Internal implements ABinder
{
    - WeakReference<TObservable> _observableInstance
    - Func<TObservable, TPresenting> _presenter
}

DataElement *-- ABinder
DataElement o- ObservableObject

abstract Border $Public implements UIElement
{
    
}

class SingleLineBorder $Public implements Border

class DoubleLineBorder $Public implements Border

class SolidBorder $Public implements Border

class TextBlock $Public implements DataElement
{
    + Bind(Observable<string>)
    + Text { get; set; }
}

class TextBox $Public implements DataElement, IKeyWaiter
{
    - TextBlock _textBlock
    - Border _border
    + Bind(Observable<string>)
    + Text { get; set; }
}

TextBox *- TextBlock
TextBox *-- Border
TextBlock o-- Observable

'hide *
show $Core

@enduml